...
        tools:layout_constraintBottom_creator="1"
        tools:layout_constraintLeft_creator="1"
        tools:layout_constraintRight_creator="1"
        tools:layout_constraintTop_creator="1" />

    <com.github.mikephil.charting.charts.PieChart
        android:id="@+id/overview_pie"
        android:layout_width="386dp"
        android:layout_height="550dp"
        tools:layout_conversion_absoluteX="8dp"
        tools:layout_conversion_absoluteY="62dp"
        tools:layout_conversion_absoluteWidth="410dp"
        tools:layout_conversion_absoluteHeight="428dp"
...
