...
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="@+id/guideline6"
        app:layout_constraintVertical_bias="0.347" />

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_catTobudget_fab"
        android:layout_width="51dp"
        android:layout_height="74dp"
        android:layout_marginBottom="79dp"
        android:layout_marginLeft="8dp"

        android:layout_marginRight="8dp"
...
