<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/bgt_list"
    android:name="com.example.tomdong.sanity.ItemFragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/budget_view_background"
    app:layoutManager="LinearLayoutManager"
    tools:context="com.example.tomdong.sanity.BudgetFragment"
    tools:listitem="@layout/fragment_budget">

    <ImageView
        android:id="@+id/my_budgets_icon"
        android:layout_width="140dp"
        android:layout_height="118dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="58dp"
        app:layout_constraintBottom_toTopOf="@+id/my_catgory_listview"
        app:layout_constraintHorizontal_bias="0.481"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.745"
        app:srcCompat="@drawable/my_budgets_icon" />

    <TextView
        android:id="@+id/myBudgets_textview"
        android:layout_width="282dp"
        android:layout_height="56dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="My Budgets"
        android:textColor="@color/cardview_light_background"
        android:textSize="30sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_budget_fab"

        android:layout_width="45dp"
        android:layout_height="54dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="6dp"
        android:clickable="true"
        app:fabSize="mini"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.975"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.019"
        app:srcCompat="@drawable/plus_icon" />

    <com.baoyz.swipemenulistview.SwipeMenuListView
        android:id="@+id/my_budgets_listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="8dp"
        android:layout_marginTop="8dp"
        android:background="@color/list_view_white_bg"
        android:focusable="false"
        android:minHeight="32dp"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintVertical_bias="0.0"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/my_budgets_icon" />
</android.support.constraint.ConstraintLayout>
