<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/add_bgt_date"
        android:layout_width="213dp"
        android:layout_height="43dp"
        android:layout_marginRight="16dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="75dp"
        android:layout_marginLeft="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:textSize="25dp"
        android:gravity="center"
        app:layout_constraintHorizontal_bias="0.897"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="16dp" />

    <TextView
        android:id="@+id/textView10"
        android:layout_width="89dp"
        android:layout_height="38dp"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="Period"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.958" />

    <TextView
        android:id="@+id/textView11"
        android:layout_width="60dp"
        android:layout_height="39dp"
        android:layout_marginBottom="13dp"
        android:layout_marginRight="31dp"
        android:gravity="center"
        android:text="Days"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        app:layout_constraintRight_toRightOf="parent" />

    <EditText
        android:id="@+id/add_bgt_name"
        android:layout_width="158dp"
        android:layout_height="40dp"
        android:hint="Budget Name"
        android:layout_marginTop="16dp"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        android:layout_marginRight="8dp"

        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp" />

    <EditText
        android:id="@+id/add_bgt_period"
        android:layout_width="127dp"
        android:layout_height="41dp"
        android:hint="0-31"
        app:layout_constraintRight_toLeftOf="@+id/textView11"
        android:layout_marginRight="25dp"
        app:layout_constraintLeft_toRightOf="@+id/textView10"
        android:layout_marginLeft="8dp"
        app:layout_constraintHorizontal_bias="0.571"
        android:layout_marginBottom="11dp"
        app:layout_constraintBottom_toTopOf="@+id/guideline7"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="25dp" />

    <Button
        android:id="@+id/add_bgt_date_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Due Date"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@+id/textView10"
        android:layout_marginLeft="16dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@+id/add_bgt_date"
        android:layout_marginRight="8dp"
        app:layout_constraintHorizontal_bias="0.0"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@+id/add_bgt_name"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintVertical_bias="0.55" />

    <android.support.constraint.Guideline
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/guideline7"
        app:layout_constraintGuide_begin="200dp"
        android:orientation="horizontal" />

</android.support.constraint.ConstraintLayout>
