...
    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_overview"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="Overview" />
        <item
            android:id="@+id/nav_mng_bgt"
            android:icon="@drawable/edit"
            android:title="Manage Budgets" />
        <item
            android:id="@+id/nav_mng_cat"
            android:icon="@drawable/edit"
            android:title="Manage Categories" />
...
