...
    <string name="cat_prompt">Choose a category</string>
    <string name="trend_prompt">Choose a frequency</string>


    <string name="cancel">Login with password</string>
    <string name="use_password">Use password</string>
    <string name="ok">OK</string>
    <string name="password_description">Enter your password to continue</string>
    <string name="new_fingerprint_enrolled_description">A new fingerprint was added to this device, so your password is required.</string>

    <string name="use_fingerprint_in_future">Use fingerprint in the future</string>
    <string name="use_fingerprint_to_authenticate_key" >use_fingerprint_to_authenticate_key</string>
    <string name="fingerprint_description">Sign in to $anity</string>
...
